--- a/server.ini
+++ b/server.ini
@@ -29,6 +29,9 @@ db_path = "sabledb.db"
 # path to locate / write configuration files
 config_dir = "."
 
+# Prometheus metrics endpoint. Uncomment to enable.
+#metrics_address = 127.0.0.1:9090
+
 # To enable TLS based communication, set here the path to the certificate + the key
 # cert = ssl/sabledb.crt
 # key = ssl/sabledb.key
